--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^6.2.0
   google_fonts: ^4.0.3
   auto_size_text: ^3.0.0
+  lottie: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/menuImages/
+    - assets/images/calendar/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
