--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  flutter_riverpod: ^2.3.0
+  flutter_riverpod: ^2.3.2
   go_router: ^6.2.0
   google_fonts: ^4.0.3
   auto_size_text: ^3.0.0
-  lottie: ^2.2.0
+  lottie: ^2.3.0
+  flutter_launcher_icons: ^0.12.0
+  google_mobile_ads: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +56,12 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/gaia_logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
 
 # The following section is specific to Flutter packages.
 flutter:
