--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   lottie: ^2.3.0
   flutter_launcher_icons: ^0.12.0
   google_mobile_ads: ^2.3.0
+  video_player: ^2.6.0
+  dots_indicator: ^2.1.0
+  shared_preferences: ^2.1.0
+
 
 dev_dependencies:
   flutter_test:
