--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.devtastic.gaia">
     <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
     <application
         android:label="GAIA"
         android:name="${applicationName}"
@@ -9,6 +9,9 @@
        <meta-data
            android:name="com.google.android.gms.ads.APPLICATION_ID"
            android:value="ca-app-pub-5940070330716158~5772296698"/>
+        <meta-data
+            android:name="com.google.android.gms.ads.AD_ID"
+            android:value="ca-app-pub-5940070330716158~5772296698"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
